2016-11-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Save the correct window geometry

	* src/main-window.c (bw_size_allocate_cb): save the window
	geometry from gtk_window_get_size instead of the GtkAllocation.

2016-11-19  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/misc.c: document libbalsa_font_string_to_css.

2016-11-19  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Silence some whining about "Using Pango syntax for the font:
	style property is deprecated; please use CSS syntax".

	* libbalsa/misc.c (libbalsa_font_string_to_css): new function.
	* libbalsa/misc.h: export it.
	* libbalsa/source-viewer.c (libbalsa_show_message_source): use
	it.
	* src/balsa-mime-widget-message.c (add_header_gchar): ditto.
	* src/balsa-mime-widget-text.c (bm_modify_font_from_string):
	ditto.
	* src/sendmsg-window.c (create_email_or_string_entry),
	(create_text_area): ditto.

2016-11-15  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use Unicode characters for double quotation marks and ellipses.

	* libbalsa/address-book-gpe.c (libbalsa_address_book_gpe_open_db),
	(libbalsa_address_book_gpe_load):
	* libbalsa/address-book-ldap.c (libbalsa_address_book_ldap_load),
	(libbalsa_address_book_ldap_add_address),
	(libbalsa_address_book_ldap_remove_address),
	(libbalsa_address_book_ldap_modify_address):
	* libbalsa/address-book-text.c (lbab_text_open_temp),
	(lbab_text_close_temp),
	(libbalsa_address_book_text_modify_address):
	* libbalsa/application-helpers.c (libbalsa_window_add_accelerator):
	* libbalsa/files.c (balsa_file_finder):
	* libbalsa/html.c (lbh_navigation_policy_decision_requested_cb):
	* libbalsa/libbalsa-conf.c (lbc_readfile), (lbc_init), (lbc_sync):
	* libbalsa/libbalsa-gpgme-cb.c (lb_gpgme_accept_low_trust_key):
	* libbalsa/libbalsa-gpgme.c (get_key_from_name):
	* libbalsa/mailbox.c (get_from_field),
	(libbalsa_mailbox_new_from_config), (mbox_model_get_value):
	* libbalsa/mailbox_imap.c (libbalsa_mailbox_imap_load_config),